c/examples/gcc/testsuite/c-c++-common/pr59280.c
/* PR c/59280 */
/* { dg-do compile } */

void bar (char *) __attribute__((constructor(foo))); /* { dg-error "constructor priorities must be integers|was not declared|undeclared|constructor priorities are not supported" } */
